# gt_traj_arbitration

./: CMakeLists.txt  README.md  gt_traj_arbitration.kdev4  gt_traj_track.kdev4  package.xml  plugin.xml
.kdev4/: gt_traj_arbitration.kdev4
include/gt_traj_arbitration/: gt_traj_arbitration.h
src/gt_traj_arbitration/: gt_traj_arbitration.cpp  main.cpp
