<?xml version="1.0"?>
<package format="2">
  <name>gt_traj_arbitration</name>
  <version>0.0.0</version>
  <description>The gt_traj_deformation package</description>

  <maintainer email="abel@todo.todo">abel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend> urdf                     </depend>
  <depend> controller_interface     </depend>
  <depend> cnr_controller_interface </depend>
  <depend> state_space_filters      </depend>
  <depend> pluginlib                </depend>
  <depend> roscpp                   </depend>
  <depend> sensor_msgs              </depend>
  <depend> std_msgs                 </depend>
  <depend> subscription_notifier    </depend>
  <depend> cnr_hardware_interface   </depend>
  <depend> name_sorting             </depend>
  <depend> joint_limits_interface   </depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>tf_conversions</depend>
  
  <depend>pbo_service</depend>
  <depend>differential_gt</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
